// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RoomStatusBar unsent messages should render warning when messages are unsent due to consent 1`] = `
<div>
  <div
    class="mx_RoomStatusBar mx_RoomStatusBar_unsentMessages"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_unsentBadge"
      >
        <div
          class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_2char cpd-theme-light"
        >
          <span
            class="mx_NotificationBadge_count"
          >
            !
          </span>
        </div>
      </div>
      <div>
        <div
          class="mx_RoomStatusBar_unsentTitle"
        >
          <span>
            You can't send any messages until you review and agree to 
            <a
              class="mx_ExternalLink"
              rel="noreferrer noopener"
              target="_blank"
            >
              our terms and conditions
              <svg
                class="mx_ExternalLink_icon"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 3h6a1 1 0 1 1 0 2H5v14h14v-6a1 1 0 1 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2"
                />
                <path
                  d="M15 3h5a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0V6.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L17.586 5H15a1 1 0 1 1 0-2"
                />
              </svg>
            </a>
            .
          </span>
        </div>
        <div
          class="mx_RoomStatusBar_unsentDescription"
        >
          You can select all or individual messages to retry or delete
        </div>
      </div>
      <div
        class="mx_RoomStatusBar_unsentButtonBar"
      >
        <div
          class="mx_AccessibleButton"
          role="button"
          tabindex="0"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 21q-.824 0-1.412-.587A1.93 1.93 0 0 1 5 19V6a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 5q0-.424.287-.713A.97.97 0 0 1 5 4h4q0-.424.287-.712A.97.97 0 0 1 10 3h4q.424 0 .713.288Q15 3.575 15 4h4q.424 0 .712.287Q20 4.576 20 5t-.288.713A.97.97 0 0 1 19 6v13q0 .824-.587 1.413A1.93 1.93 0 0 1 17 21zM7 6v13h10V6zm2 10q0 .424.287.712Q9.576 17 10 17t.713-.288A.97.97 0 0 0 11 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 10 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 9 9zm4 0q0 .424.287.712.288.288.713.288.424 0 .713-.288A.97.97 0 0 0 15 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 14 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 13 9z"
            />
          </svg>
          Delete all
        </div>
        <div
          class="mx_AccessibleButton"
          role="button"
          tabindex="0"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.93 8A8 8 0 1 1 4 12a1 1 0 1 0-2 0c0 5.523 4.477 10 10 10s10-4.477 10-10a10 10 0 0 0-.832-4A10 10 0 0 0 12 2a9.99 9.99 0 0 0-8 3.999V4a1 1 0 0 0-2 0v4a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2H5.755A7.99 7.99 0 0 1 12 4a8 8 0 0 1 6.93 4"
            />
          </svg>
          Retry all
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RoomStatusBar unsent messages should render warning when messages are unsent due to resource limit 1`] = `
<div>
  <div
    class="mx_RoomStatusBar mx_RoomStatusBar_unsentMessages"
  >
    <div
      role="alert"
    >
      <div
        class="mx_RoomStatusBar_unsentBadge"
      >
        <div
          class="mx_NotificationBadge mx_NotificationBadge_visible mx_NotificationBadge_level_highlight mx_NotificationBadge_2char cpd-theme-light"
        >
          <span
            class="mx_NotificationBadge_count"
          >
            !
          </span>
        </div>
      </div>
      <div>
        <div
          class="mx_RoomStatusBar_unsentTitle"
        >
          Your message wasn't sent because this homeserver has exceeded a resource limit. Please contact your service administrator to continue using the service.
        </div>
        <div
          class="mx_RoomStatusBar_unsentDescription"
        >
          You can select all or individual messages to retry or delete
        </div>
      </div>
      <div
        class="mx_RoomStatusBar_unsentButtonBar"
      >
        <div
          class="mx_AccessibleButton"
          role="button"
          tabindex="0"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7 21q-.824 0-1.412-.587A1.93 1.93 0 0 1 5 19V6a.97.97 0 0 1-.713-.287A.97.97 0 0 1 4 5q0-.424.287-.713A.97.97 0 0 1 5 4h4q0-.424.287-.712A.97.97 0 0 1 10 3h4q.424 0 .713.288Q15 3.575 15 4h4q.424 0 .712.287Q20 4.576 20 5t-.288.713A.97.97 0 0 1 19 6v13q0 .824-.587 1.413A1.93 1.93 0 0 1 17 21zM7 6v13h10V6zm2 10q0 .424.287.712Q9.576 17 10 17t.713-.288A.97.97 0 0 0 11 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 10 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 9 9zm4 0q0 .424.287.712.288.288.713.288.424 0 .713-.288A.97.97 0 0 0 15 16V9a.97.97 0 0 0-.287-.713A.97.97 0 0 0 14 8a.97.97 0 0 0-.713.287A.97.97 0 0 0 13 9z"
            />
          </svg>
          Delete all
        </div>
        <div
          class="mx_AccessibleButton"
          role="button"
          tabindex="0"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.93 8A8 8 0 1 1 4 12a1 1 0 1 0-2 0c0 5.523 4.477 10 10 10s10-4.477 10-10a10 10 0 0 0-.832-4A10 10 0 0 0 12 2a9.99 9.99 0 0 0-8 3.999V4a1 1 0 0 0-2 0v4a1 1 0 0 0 1 1h4a1 1 0 0 0 0-2H5.755A7.99 7.99 0 0 1 12 4a8 8 0 0 1 6.93 4"
            />
          </svg>
          Retry all
        </div>
      </div>
    </div>
  </div>
</div>
`;
